Fri Aug 15 14:02:22 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/makedll.mpt:

          Added support to the 'make' type for AIX and IRIX.

Fri Aug 15 10:38:57 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/TemplateParser.pm:

          Fixed a missing check for naming the foreach variable when dealing
          with grouped files.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Moved the setting of LDLIBS or ACE_SHLIBS before including
          wrapper_macros.GNU.  This should allow for the kylix kludge to
          work.

Fri Aug 15 15:29:16 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * apps/JAWS2/JAWS/Parse_Headers.cpp:
          Modified the ACCESSOR macro to only concatenate the x, or member
          variable, token.  This resolves a problem with the gcc 3.3
          proprocessor.  Thanks to Tim Hawes <thawes@althusius.net> for
          reporting the problem and Carlos O'Ryan for supplying the fix.

        * THANKS:
          Added Tim Hawes <thawes@althusius.net> to the hall of fame.

Fri Aug 15 09:07:09 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/OS.{h,i}: Changed "advice" to "map_advice" to avoid a
          keyword naming conflict with AspectC++.  Thanks to Gary Duzan
          <gduzan@bbn.com> for reporting this.

Fri Aug 15 01:49:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * Kokyu/Makefile.Kokyu:
          Moved the assigment to ACE_SHLIBS to a point prior to including
          wrapper_macros.GNU, because the code the modifies the link
          library names to work with Kylix is located in
          wrapper_macros.GNU, and must come after the assignment.

Fri Aug 15 00:37:22 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/tests.mpc:
          Added missing Recursive_Condition_Bug_Test and
          Unbounded_Set_Test_Ex projects.
