@@ -14,6 +14,7 @@
 
 #ifndef ACE_CONFIG_ALL_H
 #define ACE_CONFIG_ALL_H
+
 #include /**/ "ace/pre.h"
 
 #include "ace/config.h"
@@ -501,6 +502,16 @@ extern "C"
   typedef void (*ACE_EXIT_HOOK) (void);
 }
 
+// Signature for registering a cleanup function that is used by the
+// <ACE_Object_Manager> and the <ACE_Thread_Manager>.
+# if defined (ACE_HAS_SIG_C_FUNC)
+extern "C" {
+# endif /* ACE_HAS_SIG_C_FUNC */
+typedef void (*ACE_CLEANUP_FUNC)(void *object, void *param) /* throw () */;
+# if defined (ACE_HAS_SIG_C_FUNC)
+}
+# endif /* ACE_HAS_SIG_C_FUNC */
+
 // ============================================================================
 // log_msg declarations
 // ============================================================================
@@ -682,4 +693,5 @@ extern "C" u_long CLS##_Export _get_dll_unload_policy (void) \
 #endif /* ! ACE_HAS_VERBOSE_NOTSUP */
 
 #include /**/ "ace/post.h"
+
 #endif /* ACE_CONFIG_ALL_H */
